--- a/index.html
+++ b/index.html
@@ -21,8 +21,41 @@
             <h1>Let's go to...</h1>
         </header>
         <section>
-            <h2>Section title</h2>
+            <h1 id="-explore-the-sahara-"><strong>Explore the Sahara!</strong></h1>
+<p><img src="./static/images/front.image.webp" alt="Wide image of The Sahara Desert with camels in the foreground"></p>
+<p>The dunes and plains of the Sahara strecth into the distance for an eternity, reaching from the Atlantic Coast to the Red Sea, it covers a quarter of the African continent and is the size of the United States!</p>
+<hr>
         </section>
+        <h2 id="-what-to-bring-check-your-checklist-"><strong>What to bring... check your checklist!</strong></h2>
+<ol>
+<li><p>A windbreaker or light jacket<br>Although there is an average temperature of over 40 degrees celcius, this will be needed to survive the cooler nights</p>
+</li>
+<li><p>A headscarf or desert hats<br>To block the sun and dust.</p>
+</li>
+<li><p>Hiking Boots<br>For the day and night treks.</p>
+</li>
+<li><p>Comfortable jeans or trousers<br>To cover your whole leg to protect from the camel&#39;s rough fur.</p>
+</li>
+<li><p>Water bottle<br>We&#39;ve got the water, fill up at each camel!</p>
+</li>
+</ol>
+<hr>
+        </section>
+        <h2 id="-camel-rides-the-most-reliable-way-to-travel"><strong>Camel rides</strong> - The most reliable way to travel</h2>
+<p><img src="./static/images/camel_ride.jpg" alt="Group image of people riding camels in desert"></p>
+<p>      Hold on tight while going over the sand dunes!</p>
+<hr>
+        </section>
+        <h2 id="-glamp-in-the-desert-tents-"><strong>Glamp in the desert tents!</strong></h2>
+<p>Sleep under the stars, enjoy the landscape...</p>
+<p><img src="./static/images/inside_of_tent.jpg" alt="Inside shot of tent lit by lanterns in the evening"></p>
+<p><img src="./static/images/tent_with_campfire.jpg" alt="Outside shot image of tent lit by campfire"></p>
+<p><img src="./static/images/outside_tent.jpg" alt="outside image of tent"></p>
+
+        </section>
+    
+
+
     </main>
 </body>
 </html>
