first version of website

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Let's go to...</title>
+    <link href="https://fonts.googleapis.com/css?family=Nunito|Roboto|Roboto+Slab&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./static/css/milligram.css" />
     <link rel="stylesheet" href="./static/css/defaults.css" />
     <link rel="stylesheet" href="./static/css/app.css" />
@@ -18,14 +18,15 @@
     </div>    
     <main class="app">
         <header>
-            <h1>Let's go to...</h1>
+
         </header>
-        <section>
+        <section class='sand'>
             <h1 id="-explore-the-sahara-"><strong>Explore the Sahara!</strong></h1>
 <p><img src="./static/images/front.image.webp" alt="Wide image of The Sahara Desert with camels in the foreground"></p>
 <p>The dunes and plains of the Sahara strecth into the distance for an eternity, reaching from the Atlantic Coast to the Red Sea, it covers a quarter of the African continent and is the size of the United States!</p>
 <hr>
         </section>
+        <section class='light'>
         <h2 id="-what-to-bring-check-your-checklist-"><strong>What to bring... check your checklist!</strong></h2>
 <ol>
 <li><p>A windbreaker or light jacket<br>Although there is an average temperature of over 40 degrees celcius, this will be needed to survive the cooler nights</p>
@@ -40,6 +41,7 @@
 </li>
 </ol>
 <hr>
+</section>
         </section>
         <h2 id="-camel-rides-the-most-reliable-way-to-travel"><strong>Camel rides</strong> - The most reliable way to travel</h2>
 <p><img src="./static/images/camel_ride.jpg" alt="Group image of people riding camels in desert"></p>
