review section added

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </li>
 <li><p>Comfortable jeans or trousers<br>To cover your whole leg to protect from the camel&#39;s rough fur.</p>
 </li>
-<li><p>Water bottle<br>We&#39;ve got the water, fill up at each camel!</p>
+<li><p>Water bottle<br>We&#39;ve got the water, fill up at each camel stop!</p>
 </li>
 </ol>
 <hr>
@@ -53,6 +53,12 @@
 <p><img src="./static/images/inside_of_tent.jpg" alt="Inside shot of tent lit by lanterns in the evening"></p>
 <p><img src="./static/images/tent_with_campfire.jpg" alt="Outside shot image of tent lit by campfire"></p>
 <p><img src="./static/images/outside_tent.jpg" alt="outside image of tent"></p>
+
+        </section>
+        
+<h2 id="-reviews-"><strong>Reviews</strong></h2>
+<p>&#39;As sunset approached, our group climbed to the top of a sand dune which was situated behind our camp. Everything was perfect. There was virtually no sound, and I began to take the absurdity of just how far out I was, the light was perfect. We settled down for a lovely meal in the evening by the fire. Although it got quite cold by the night, there was ample bedding available, and the warmth from the fire was more than adequate to keep comftorble.&#39; - Liakat&#39;s review of her sahara holiday</p>
+
 
         </section>
     
