--- a/index.html
+++ b/index.html
@@ -18,51 +18,55 @@
     </div>    
     <main class="app">
         <header>
-
         </header>
+
         <section class='sand'>
             <h1 id="-explore-the-sahara-"><strong>Explore the Sahara!</strong></h1>
-<p><img src="./static/images/front.image.webp" alt="Wide image of The Sahara Desert with camels in the foreground"></p>
-<p>The dunes and plains of the Sahara strecth into the distance for an eternity, reaching from the Atlantic Coast to the Red Sea, it covers a quarter of the African continent and is the size of the United States!</p>
-<hr>
+            <p><img src="./static/images/front.image.webp" alt="Wide image of The Sahara Desert with camels in the foreground"></p>
+            <p>The dunes and plains of the Sahara strecth into the distance for an eternity, reaching from the Atlantic Coast to the Red Sea, it covers a quarter of the African continent and is the size of the United States!</p>
+            <hr>
         </section>
+
         <section class='light'>
-        <h2 id="-what-to-bring-check-your-checklist-"><strong>What to bring... check your checklist!</strong></h2>
-<ol>
-<li><p>A windbreaker or light jacket<br>Although there is an average temperature of over 40 degrees celcius, this will be needed to survive the cooler nights</p>
-</li>
-<li><p>A headscarf or desert hats<br>To block the sun and dust.</p>
-</li>
-<li><p>Hiking Boots<br>For the day and night treks.</p>
-</li>
-<li><p>Comfortable jeans or trousers<br>To cover your whole leg to protect from the camel&#39;s rough fur.</p>
-</li>
-<li><p>Water bottle<br>We&#39;ve got the water, fill up at each camel stop!</p>
-</li>
-</ol>
-<hr>
-</section>
+            <h2 id="-what-to-bring-check-your-checklist-"><strong>What to bring... check your checklist!</strong></h2>
+            <ol>
+            <li><p>A windbreaker or light jacket<br>Although there is an average temperature of over 40 degrees celcius, this will be needed to survive the cooler nights</p>
+            </li>
+            <li><p>A headscarf or desert hats<br>To block the sun and dust.</p>
+            </li>
+            <li><p>Hiking Boots<br>For the day and night treks.</p>
+            </li>
+            <li><p>Comfortable jeans or trousers<br>To cover your whole leg to protect from the camel&#39;s rough fur.</p>
+            </li>
+            <li><p>Water bottle<br>We&#39;ve got the water, fill up at each camel stop!</p>
+            </li>
+            </ol>
+            <hr>
         </section>
-        <h2 id="-camel-rides-the-most-reliable-way-to-travel"><strong>Camel rides</strong> - The most reliable way to travel</h2>
-<p><img src="./static/images/camel_ride.jpg" alt="Group image of people riding camels in desert"></p>
-<p>      Hold on tight while going over the sand dunes!</p>
-<hr>
-        </section>
-        <h2 id="-glamp-in-the-desert-tents-"><strong>Glamp in the desert tents!</strong></h2>
-<p>Sleep under the stars, enjoy the landscape...</p>
-<p><img src="./static/images/inside_of_tent.jpg" alt="Inside shot of tent lit by lanterns in the evening"></p>
-<p><img src="./static/images/tent_with_campfire.jpg" alt="Outside shot image of tent lit by campfire"></p>
-<p><img src="./static/images/outside_tent.jpg" alt="outside image of tent"></p>
 
-        </section>
-        
-<h2 id="-reviews-"><strong>Reviews</strong></h2>
-<p>&#39;As sunset approached, our group climbed to the top of a sand dune which was situated behind our camp. Everything was perfect. There was virtually no sound, and I began to take the absurdity of just how far out I was, the light was perfect. We settled down for a lovely meal in the evening by the fire. Although it got quite cold by the night, there was ample bedding available, and the warmth from the fire was more than adequate to keep comftorble.&#39; - Liakat&#39;s review of her sahara holiday</p>
 
+        <section class='light'>
+            <h2 id="-camel-rides-the-most-reliable-way-to-travel"><strong>Camel rides</strong> - The most reliable way to travel</h2>
+            <p><img src="./static/images/camel_ride.jpg" alt="Group image of people riding camels in desert"></p>
+            <p>      Hold on tight while going over the sand dunes!</p>
+            <hr>
+        </section>
+
+        <section class='light'>
+            <h2 id="-glamp-in-the-desert-tents-"><strong>Glamp in the desert tents!</strong></h2>
+            <p>Sleep under the stars, enjoy the landscape...</p>
+            <p><img src="./static/images/inside_of_tent.jpg" alt="Inside shot of tent lit by lanterns in the evening"></p>
+            <p><img src="./static/images/tent_with_campfire.jpg" alt="Outside shot image of tent lit by campfire"></p>
+            <p><img src="./static/images/outside_tent.jpg" alt="outside image of tent"></p>
+        </section>
+
+        <section class='review'>
+            <h2 id="-not-yet-tempted-read-liakat-s-review-"><strong>Not yet tempted? Read Liakat&#39;s Review...</strong></h2>
+<p><img src="./static/images/liakat.jpg" alt="image of liakat in sahara desert"></p>
+<p>&#39;As sunset approached, our group climbed to the top of a sand dune which was situated behind our camp. Everything was perfect. There was virtually no sound, and I began to take the absurdity of just how far out I was, the light was perfect. We settled down for a lovely meal in the evening by the fire. Although it got quite cold by the night, there was ample bedding available, and the warmth from the fire was more than adequate to keep comftorble.&#39; - Liakat after her Sahara holiday</p>
 
         </section>
     
-
 
     </main>
 </body>
