gallery on html

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
         <section class='light'>
             <h2 id="-what-to-bring-check-your-checklist-"><strong>What to bring... check your checklist!</strong></h2>
+            <p><img src="./static/images/bag.jpg" alt="bag in desert"> </p>
             <ol>
             <li><p>A windbreaker or light jacket<br>Although there is an average temperature of over 40 degrees celcius, this will be needed to survive the cooler nights</p>
             </li>
@@ -52,12 +53,26 @@
             <hr>
         </section>
 
+        <section>
+                <h2 id="-when-to-go-to-the-sahara-desert-"><strong>When to go to the Sahara Desert</strong></h2>
+                <p><img src="./static/images/sunnydesert.webp" alt="Image of desert at summer time"></p>
+                <p>The summer is one to avoid - Between June and September the sun is simply too hot for it to be enjoyable.<br>Winter is manageable if you werap up warm; however, the  best time to visit the Sahara Desert is definitely in spring or autumn.<br>By October the searing heat of the summer has passed awaybut it&#39;s still pleasant after dark. Similar temperaturesare found in spring, but between February and April, sandstorms are common.  </p>
+                <hr>
+            </section>
+        
         <section class='light'>
             <h2 id="-glamp-in-the-desert-tents-"><strong>Glamp in the desert tents!</strong></h2>
             <p>Sleep under the stars, enjoy the landscape...</p>
-            <p><img src="./static/images/inside_of_tent.jpg" alt="Inside shot of tent lit by lanterns in the evening"></p>
-            <p><img src="./static/images/tent_with_campfire.jpg" alt="Outside shot image of tent lit by campfire"></p>
-            <p><img src="./static/images/outside_tent.jpg" alt="outside image of tent"></p>
+            <div class= 'gallery-window'>
+                <div class= 'gallery'>
+                    <img src="./static/images/inside_of_tent.jpg" alt="Inside shot of tent lit by lanterns in the evening">
+                    <img src="./static/images/tent_with_campfire.jpg" alt="Outside shot image of tent lit by campfire">
+                    <img src="./static/images/outside_tent.jpg" alt="outside image of tent">
+                </div>
+            </div>
+             
+            <p>The essential Sahara activity is to stay overnight in a tenter Berber camp. Accommodation ranges from the luxurious to the simple but comfortable to make it feel more authentic. Blankets are provided but you can bring your own sleeping bag. You will be accompanied by traditinal music and dancing.</p>
+            <hr>
         </section>
 
         <section class='review'>
