reduce picture size

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <section class='light'>
             <h2 id="-what-to-bring-check-your-checklist-"><strong>What to bring... check your checklist!</strong></h2>
-            <p><img src="./static/images/bag.jpg" alt="bag in desert"> </p>
+            <p><img class='bag-image'src="./static/images/bag.jpg" alt="bag in desert"> </p>
             <ol>
             <li><p>A windbreaker or light jacket<br>Although there is an average temperature of over 40 degrees celcius, this will be needed to survive the cooler nights</p>
             </li>
